--- a/Secciones/adminMenuAgregar.html
+++ b/Secciones/adminMenuAgregar.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../Css/paginaPrincipal.css">
         <link rel="stylesheet" href="../Css/drpdwn.css">
         <link rel="stylesheet" href="../Css/estadisticas.css">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="../Css/formHacerPedido.css">
         <title>Administración | Agregar</title>
     </head>
