--- a/Secciones/footer.html
+++ b/Secciones/footer.html
@@ -4,6 +4,7 @@
         <title>Footer</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../Css/paginaPrincipal.Css">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
     </head>
     <body>
         <div class="footer">
