--- a/Secciones/adminMenuEditar.html
+++ b/Secciones/adminMenuEditar.html
@@ -48,7 +48,7 @@
                     <a href="adminMenuAgregar.html">Agregar</a>
                     <a href="#">Editar</a>
                     <a href="adminMenuEliminar.html">Eliminar</a>
-                    <a href="adminMenuInventario.html">Inventario</a><br>
+                    <a href="adminMenuInventario.php">Inventario</a><br>
                 </div>
                 <div class="otraBarra">
                     <h2>Agregar Al Menú</h2>
