--- a/correo.html
+++ b/correo.html
@@ -1,7 +1,18 @@
 <html><body>
     <table style= "border:0; background-color:'#e0e0e0';" width='100%' cellpadding='0' cellspacing='0'>
         <tr><td>
-            <table width='100%' cellpadding='0' cellspacing='0' style='max-width:700px; background-color:#fff; font-family:Verdana, Geneva, sans-serif; border:0;'>
+            <table width='100%' cellpadding='0' cellspacing='0' 
+            style='  
+             max-width:700px; 
+             background-color:#fff;
+             font-family:Verdana, Geneva, sans-serif; border:0;
+             display: grid;
+             place-items: center;
+             position: absolute;
+             top: 50%;
+             left: 50%;
+             transform: translate(-50%, -50%);
+             '>
                 <thead>
                     <tr height='80'>
                         <th colspan='4' style='background-color:#ffffff; border-bottom:solid 1px #bdbdbd; font-family:Verdana, Geneva, sans-serif; color:#333; font-size:34px;'>
