--- a/Secciones/footer.html
+++ b/Secciones/footer.html
@@ -4,6 +4,7 @@
         <title>Footer</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../Css/paginaPrincipal.Css">
+        <link rel="stylesheet" href="../Css/footerHeader.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
     </head>
     <body>
@@ -15,25 +16,25 @@
                 Campus Metropolitano Víctor Levi Sasso.<br>
                 Teléfono. (507) 560-3000<br>
                 Correo electrónico: buzondesugerencias@utp.ac.pa<br>
-                311 Centro de Atención Ciudadana<br>
-                Políticas de Privacidad<br>
+                <a href="https://utp.ac.pa/311-centro-de-atencion-ciudadana" target="_blank">311 Centro de Atención Ciudadana</a><br>
+                <a href="https://innovacion.gob.pa/acercade/disclaimer/" target="_blank">Políticas de Privacidad</a><br>
             </h3>
             <div class="footerP1">
-                <a href="">Matrícula UTP</a><br>
-                <a href="">Correo UTP</a><br>
-                <a href="">Biblioteca UTP</a><br>
-                <a href="">Publicaciones</a><br>
-                <a href="">Sala De Prensa</a><br>
-                <a href="">Bolsa De Trabajo</a><br>
-                <a href="">Acreditación</a><br>
-                <a href="">Centro De Lenguas</a><br>
+                <a href="http://matricula.utp.ac.pa/" target="_blank">Matrícula UTP</a><br>
+                <a href="http://correo.utp.ac.pa/" target="_blank">Correo UTP</a><br>
+                <a href="http://www.sistemadebibliotecas.utp.ac.pa/" target="_blank">Biblioteca UTP</a><br>
+                <a href="https://www.utp.ac.pa/introduccion-la-seccion-de-publicaciones" target="_blank">Publicaciones</a><br>
+                <a href="https://www.utp.ac.pa/noticias" target="_blank">Sala De Prensa</a><br>
+                <a href="https://www.utp.ac.pa/bolsa-de-trabajo-0" target="_blank">Bolsa De Trabajo</a><br>
+                <a href="https://www.utp.ac.pa/introduccion-acreditacion" target="_blank">Acreditación</a><br>
+                <a href="http://centrodelenguas.utp.ac.pa/" target="_blank">Centro De Lenguas</a><br>
             </div>
             <div class="footerP2">
-                <a href="">Mapa De Ubicación</a><br>
-                <a href="">Mapa Del Sitio</a><br>
-                <a href="">Directorio Telefónico</a><br>
-                <a href="">Contáctenos</a><br>
-                <a href="">Identidad Visual</a><br>
+                <a href="https://www.utp.ac.pa/mapas-de-ubicacion" target="_blank">Mapa De Ubicación</a><br>
+                <a href="https://www.utp.ac.pa/mapa-del-sitio" target="_blank">Mapa Del Sitio</a><br>
+                <a href="https://www.utp.ac.pa/directorio-telefonico" target="_blank">Directorio Telefónico</a><br>
+                <a href="https://www.utp.ac.pa/contactenos" target="_blank">Contáctenos</a><br>
+                <a href="https://www.utp.ac.pa/identidad-visual-de-la-utp" target="_blank">Identidad Visual</a><br>
             </div>
         </div>
     </body>
